tab links changed + styles in aomatice

--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -105,7 +105,9 @@
                            typu
                            $$m\times n$$ , ktorej $$i,j$$ -ty prvok
                            vypočítame pomocou vzt'ahu:
-                        <div class="table-responsive" style="margin: 3rem auto 1rem auto;">\begin{align}
+                        <div
+                           style="margin: 1rem auto 1.5rem auto; overflow-y: auto; overflow-y: hidden; text-align: center;">
+                           \begin{align}
                            c_{ij} &= a_{i1}b_{1j} + a_{i2}b_{2j} + \dots + a_{i\ell}b_{\ell j} \
                            \end{align}</div>
 
@@ -187,6 +189,7 @@
                                  </tbody>
                               </table>
                            </div>
+                           <div>$$\times$$</div>
                            <div style="margin: 1rem;">
                               <table id="matrix-input1">
                                  <tbody>
