--- a/linearnaAlgebra/témy/invMaticaDet/index.html
+++ b/linearnaAlgebra/témy/invMaticaDet/index.html
@@ -26,7 +26,7 @@
       $('#sidebar').load('../../../components/collapse_bar.html', function () {
          $('#sidebar').find('li:contains("Inverzná matica pomocou determinantov")').addClass('active').children('a').addClass('active');
       });
-      $('#myTab').load('../../../components/tab_links.html');
+      $('#myTab').load('../../../components/tab_links2.html');
 
    });
 </script>
