--- a/linearnaAlgebra/témy/riadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/riadkoveOperacie/index.html
@@ -150,7 +150,7 @@
                               d & e & f \\
                               g & h & i
                               \end{pmatrix}
-                              \xrightarrow{E1_{12}(2)}
+                              \xrightarrow{R_1 \leftrightarrow R_1 + 2 R_2}
                               \begin{pmatrix}
                               a + 2d & b + 2e & c + 2f \\
                               d & e & f \\
