--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -23,9 +23,9 @@
 
 <body>
    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #f5c05d;">
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(235, 235, 94);">
          <div class="container-fluid">
-            <a class="navbar-brand pad" style="padding: 0.5rem 0; font-weight: bold;" href="../landingPage/index.html">
+            <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="../landingPage/index.html">
                <svg style="margin: 6px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-calculator" viewBox="0 0 16 16">
                   <path
@@ -38,13 +38,13 @@
                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                <ul class="navbar-nav">
                   <li class="nav-item">
                      <a class="nav-link" aria-current="page" href="../landingPage/index.html">Domov</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link active" style="border: 1px solid white;" href="">Matice</a>
+                     <a class="nav-link active" href="">Matice</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="témy/sustavyLinearnychRovnic/index.html">Sústavy lineárnych rovníc</a>
@@ -56,46 +56,40 @@
       </nav>
    </header>
    <main>
-      <h2 id="latitle">Matice</h2>
-      <div class="cards" style="margin-bottom: 11rem;">
-         <a class="nav-link1" href="témy/uvod/index.html">
-            <div class="card">ÚVOD</div>
-         </a>
-         <a class="nav-link1" href="témy/riadkoveOperacie/index.html">
-            <div class="card">RIADKOVÉ OPERÁCIE</div>
-         </a>
-         <a class="nav-link1" href="témy/gaussovTvarMatice/index.html">
-            <div class="card">GAUSSOV TVAR MATICE</div>
-         </a>
-         <a class="nav-link1" href="témy/vypočetGauss/index.html">
-            <div class="card">VÝPOČET GAUSSOVHO TVARU MATICE</div>
-         </a>
-         <a class="nav-link1" href="témy/algebrOperacieMatice/index.html">
-            <div class="card">ALGEBRAICKÉ OPERÁCIE S MATICAMI</div>
-         </a>
-         <a class="nav-link1" href="témy/stvMatica/index.html">
-            <div class="card">ŠTVORCOVÉ MATICE: POJEM INVERZNEJ MATICE</div>
-         </a>
-         <a class="nav-link1" href="témy/invMaticaVypocet/index.html">
-            <div class="card">VÝPOČET INVERZNEJ MATICE</div>
-         </a>
-         <a class="nav-link1" href="témy/detStvMatice/index.html">
-            <div class="card">DEFINÍCIA DETERMINANTU ŠTVORCOVEJ MATICE</div>
-         </a>
-         <a class="nav-link1" href="témy/deterRiadkoveOperacie/index.html">
-            <div class="card">DETERMINANT A RIADKOVÉ OPERÁCIE</div>
-         </a>
-         <a class="nav-link1" href="témy/invMaticaDet/index.html">
-            <div class="card">INVERZNÁ MATICA POMOCOU DETERMINANTOV</div>
-         </a>
-         <a class="nav-link1" href="témy/vztahyMedziPojmami/index.html">
-            <div class="card">DÔLEŽITÉ VZŤAHY MEDZI UVEDENÝMI POJMAMI</div>
-         </a>
-         <a class="nav-link1" href="témy/cvicenia/index.html">
-            <div class="card animated bounce" id="exercise">CVIČENIA</div>
-         </a>
-
+      <div style="margin-bottom: 5rem;">
+         <h2 class="latitle">Matice</h2>
+         <div class="cards">
+            <a class="nav-link1" href="témy/uvod/index.html">
+               <div class="card">ÚVOD</div>
+            </a>
+            <a class="nav-link1" href="témy/riadkoveOperacie/index.html">
+               <div class="card">RIADKOVÉ OPERÁCIE</div>
+            </a>
+            <a class="nav-link1" href="témy/gaussovTvarMatice/index.html">
+               <div class="card">GAUSSOV TVAR MATICE</div>
+            </a>
+            <a class="nav-link1" href="témy/vypočetGauss/index.html">
+               <div class="card">VÝPOČET GAUSSOVHO TVARU MATICE</div>
+            </a>
+            <a class="nav-link1" href="témy/algebrOperacieMatice/index.html">
+               <div class="card">ALGEBRAICKÉ OPERÁCIE S MATICAMI</div>
+            </a>
+            <a class="nav-link1" href="témy/stvMatica/index.html">
+               <div class="card">ŠTVORCOVÉ MATICE: POJEM INVERZNEJ MATICE</div>
+            </a>
+            <a class="nav-link1" href="témy/invMaticaVypocet/index.html">
+               <div class="card">VÝPOČET INVERZNEJ MATICE</div>
+            </a>
+            <a class="nav-link1" href="témy/detStvMatice/index.html">
+               <div class="card">DEFINÍCIA DETERMINANTU ŠTVORCOVEJ MATICE</div>
+            </a>
+            <a class="nav-link1" href="témy/deterRiadkoveOperacie/index.html">
+               <div class="card">DETERMINANT A RIADKOVÉ OPERÁCIE</div>
+            </a>
+         </div>
       </div>
+      <hr>
+      <div class="latitle">Sústavy lineárnych rovníc</div>
    </main>
    <footer class="text-center text-lg-start" style="background-color: lightgray; height: 4rem;">
       <!-- Copyright -->
