--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #f5c05d;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid">
                 <a class="navbar-brand pad" style="padding: 0.5rem 0; font-weight: bold;"
                     href="../../../landingPage/index.html">
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="../../index.html">Matice</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" style="border: 1px solid white" href="">Sústavy
+                            <a class="nav-link active" href="">Sústavy
                                 lineárnych
                                 rovníc</a>
                         </li>
