--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -44,7 +44,7 @@
                      <a class="nav-link" aria-current="page" href="../landingPage/index.html">Domov</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link active" href="">Matice</a>
+                     <a class="nav-link active" href="témy/uvod/index.html">Matice</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="témy/sustavyLinearnychRovnic/index.html">Sústavy lineárnych rovníc</a>
