--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -14,7 +14,8 @@
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-        <link rel="stylesheet" href="../../style.css" />
+
+        <link rel="stylesheet" href="../../../styleAll.css">
         <!-- Font Awesome -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
         <!-- Google Fonts -->
@@ -28,7 +29,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+        <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
                 <a class="navbar-brand pad" style="padding: 0.5rem 0; font-weight: bold;"
                     href="../../../landingPage/index.html">
@@ -53,7 +54,7 @@
                             <a class="nav-link" href="../../index.html">Matice</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="">Sústavy
+                            <a class="nav-link " href="">Sústavy
                                 lineárnych
                                 rovníc</a>
                         </li>
