--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -48,8 +48,7 @@
                         data-bs-offset="56">
                         <span class="navbar-toggler-icon"></span>
                      </button>
-                     <a class="navbar-brand" href="../../../landingPage/index.html"
-                        style="padding-left: 1rem;">Matice</a>
+                     <a class="navbar-brand" href="../../index.html" style="padding-left: 1rem;">Matice</a>
                   </div>
                </nav>
             </header>
