--- a/linearnaAlgebra/témy/gaussovTvarMatice/index.html
+++ b/linearnaAlgebra/témy/gaussovTvarMatice/index.html
@@ -49,7 +49,7 @@
                 aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation" data-bs-offset="56">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <a class="navbar-brand" href="../../../landingPage/index.html" style="padding-left: 1rem">Matice</a>
+              <a class="navbar-brand" href="../../index.html" style="padding-left: 1rem">Matice</a>
             </div>
           </nav>
         </header>
