--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sk">
 
 <head>
    <meta charset="UTF-8" />
@@ -25,7 +25,7 @@
    <header>
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(235, 235, 94);">
          <div class="container-fluid">
-            <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="../landingPage/index.html">
+            <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="#">
                <svg style="margin: 6px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-calculator" viewBox="0 0 16 16">
                   <path
@@ -44,7 +44,7 @@
                      <a class="nav-link" aria-current="page" href="../landingPage/index.html">Domov</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link active" href="témy/uvod/index.html">Matice</a>
+                     <a class="nav-link" href="témy/uvod/index.html">Matice</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="témy/sustavyLinearnychRovnic/index.html">Sústavy lineárnych rovníc</a>
