--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -16,6 +16,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
     integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
 
   <link rel="stylesheet" href="../styles.css" />
   <link rel="stylesheet" href="mainStyle.css" />
@@ -38,27 +43,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item mx-auto">
+              <a class="nav-link" aria-current="page" href="../funkcie/index.html">Funkcie</a>
+            </li>
+            <li class="nav-item mx-auto">
+              <a class="nav-link" aria-current="page" href="../linearnaAlgebra/index.html">Lineárna algebra</a>
+            </li>
+            <li class="nav-item mx-auto">
               <a class="nav-link" aria-current="page" href="../graf_vsetko/index.html">Graf</a>
-            </li>
-            <li class="nav-item dropdown mx-auto">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                Témy
-              </a>
-              <ul class="dropdown-menu dropdown-menu-white" aria-labelledby="navbarDarkDropdownMenuLink"
-                style="background-color: #83a0b1;">
-                <li>
-                  <a class="dropdown-item" href="../linearnaAlgebra/index.html">Lineárna algebra</a>
-                </li>
-                <li><a class="dropdown-item" href="#">Funkcie</a></li>
-                <li><a class="dropdown-item" href="#">Kalkulačky</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mx-auto">
-              <a class="nav-link" id="la" href="#">Kalkulačky</a>
-            </li>
-            <li class="nav-item mx-auto">
-              <a class="nav-link" id="bordered" href="#">Kontakt</a>
             </li>
             <li class="nav-item nav-night mx-auto">
               <div class=" nav-link" id="nightMode">
@@ -112,7 +103,7 @@
             <p class="card-text">
               Funkcie jednej reálnej premennej.
             </p>
-            <a href="#" class="btn btn-primary">Vybrať</a>
+            <a href="../funkcie/index.html" class="btn btn-primary">Vybrať</a>
           </div>
         </div>
       </div>
