--- a/funkcie/index.html
+++ b/funkcie/index.html
@@ -27,8 +27,7 @@
 
 <body>
     <header>
-        <nav id="navbar-example2" class="navbar navbar-light bg-light fixed-top px-3 navbar-expand-lg"
-            style="background-color: rgb(230, 226, 226);">
+        <nav id="navbar-example2" class="navbar navbar-light bg-light fixed-top px-3 navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand pad" style="padding: 0.5rem 0;" href="../landingPage/index.html">
                     <svg style="margin: 6px;" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -128,7 +127,7 @@
 
                 <input id="function" type="text" value="sin(x)" onchange="plot();">
                 <p></p>
-                <button type="button" onclick="plot();" class="btn btn-outline-info">Zobraziť graf</button>
+                <button type="button" onclick="plot();" class="btn btn-outline-primary">Zobraziť graf</button>
 
             </section>
 
