--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -41,7 +41,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                <ul class="navbar-nav">
                   <li class="nav-item">
-                     <a class="nav-link" style="font-weight: bold;" href=" ../../landingPage/index.html">
+                     <a class="nav-link" style=" color: #0d6efd" href=" ../../landingPage/index.html">
                         <svg style=" margin-right: 2px; margin-bottom: 4px;" xmlns="http://www.w3.org/2000/svg"
                            width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                            <path
