--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -11,7 +11,8 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="../../../styleAll.css">
     <link rel="stylesheet" href="../../style.css">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
@@ -19,8 +20,15 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.1.0/mdb.min.js"></script>
     <link rel="icon" type="image/png" href="../../../images/fav.png">
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <title>Sústavy lineárnych rovníc</title>
 </head>
+<script>
+    $(document).ready(function () {
+        $('#myTab').load('../../../components/tab_links.html');
+
+    });
+</script>
 
 <body>
     <header>
@@ -55,7 +63,7 @@
                             <a class="nav-link" href="../uvod/index.html">Matice</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="témy/sustavyLinearnychRovnic/index.html">Sústavy lineárnych
+                            <a class="nav-link active" href="#">Sústavy lineárnych
                                 rovníc</a>
                         </li>
 
@@ -66,6 +74,62 @@
     </header>
     <main>
         <h3 style="text-align: center;">Sústavy lineárnych rovníc</h3>
+        <div class="container my-5">
+            <ul class="nav nav-tabs nav-fill" style="margin-bottom: 3rem;" id="myTab" role="tablist"></ul>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active " id="theory" role="tabpanel" aria-labelledby="theory-tab"
+                    style="text-align: left;">
+                    <p>Sústavu rovníc:</p>
+                    <p class="text-center">$$\begin{aligned}
+                        a_{11}x_1 + \dots + a_{1n}x_n &= b_1 \\
+                        a_{21}x_1 + \dots + a_{2n}x_n &= b_2 \\
+                        &\vdots \\
+                        a_{m1}x_1 + \dots + a_{mn}x_n &= b_m.
+                        \end{aligned}$$</p>
+                    <br><br>
+                    <p>nazývame<span class="text-primary"> sústava $$m$$ lineárnych algebraických rovníc o $$n$$
+                            neznámych</span> (SLAR). Čísla
+                        $$a_{11}, a_{12}, . . . , a_{mn}$$ nazývame koeficienty sústavy; $$x1, x2, . . . , xn$$ sú
+                        neznáme a
+                        $$b_{1}, b_{2}, . .
+                        . ,
+                        b_{m}$$ sú absolútne členy (pravá strana). Maticu (tabuľku), utvorenú z koeficientov :</p>
+                    <br>
+                    <div class="text-center mt-3">$$A = \begin{pmatrix}
+                        a_{11} & a_{12} & \cdots & a_{1n} \\
+                        a_{21} & a_{22} & \cdots & a_{2n} \\
+                        \vdots & \vdots & \ddots & \vdots \\
+                        a_{m1} & a_{m2} & \cdots & a_{mn}
+                        \end{pmatrix}$$</div>
+                    <br><br>
+                    <p>nazývame <span class="text-primary">maticou sústavy</span> . Ak k nej pridáme stĺpec,
+                        utvorený z
+                        pravej strany, dostaneme
+                        maticu</p>
+                    <br>
+                    <div class="text-center table-responsive overflow-y-hidden">$$
+                        A_0 = \begin{pmatrix}
+                        a_{11} & a_{12} & \cdots & a_{1n} & b_1 \\
+                        a_{21} & a_{22} & \cdots & a_{2n} & b_2 \\
+                        \vdots & \vdots & \ddots & \vdots & \vdots \\
+                        a_{m1} & a_{m2} & \cdots & a_{mn} & b_m \\
+                        \end{pmatrix}
+                        $$
+                    </div>
+                    <br>
+                    <p>ktorú nazývame <span class="text-primary">rozšírenou maticou sústavy</span>.</p>
+
+                </div>
+
+                <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
+                    <p>Tab 2 content</p>
+                </div>
+                <div class="tab-pane fade" id="practice-problems" role="tabpanel"
+                    aria-labelledby="practice-problems-tab">
+                    <p>Tab 3 content</p>
+                </div>
+            </div>
+        </div>
     </main>
 
 </body>
