added calc to sustavy linear rovn + more fixes

--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -167,17 +167,17 @@
                         <h4 style="text-align: center;">Násobenie matíc</h4>
                         <br>
                         <label for="matrix-rows">Počet riadkov matice 1:</label>
-                        <input style="border: none; border-bottom: 1px solid green; text-align: center" type="number"
+                        <input style="border: none; border-bottom: 1px solid black; text-align: center" type="number"
                            id="matrix-rows" name="matrix-rows" value="3" min="1" max="10" />
 
                         <label for="matrix-cols">Počet stĺpcov matice 1:</label>
-                        <input style="border: none; border-bottom: 1px solid green; text-align: center" type="number"
+                        <input style="border: none; border-bottom: 1px solid black; text-align: center" type="number"
                            id="matrix-cols" name="matrix-cols" value="3" min="1" max="10" /><br><br>
                         <label for="matrix-rows">Počet riadkov matice 2:</label>
-                        <input style="border: none; border-bottom: 1px solid rgb(123, 222, 255); text-align: center"
+                        <input style="border: none; border-bottom: 1px solid rgb(199, 199, 51); text-align: center"
                            type="number" id="matrix-rows1" name="matrix-rows" value="3" min="1" max="10" />
                         <label for="matrix-cols">Počet stĺpcov matice 2:</label>
-                        <input style="border: none; border-bottom: 1px solid rgb(123, 222, 255); text-align: center"
+                        <input style="border: none; border-bottom: 1px solid rgb(199, 199, 51); text-align: center"
                            type="number" id="matrix-cols1" name="matrix-cols" value="3" min="1" max="10" />
 
                         <div
