--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -133,7 +133,7 @@
                      <div style="margin-bottom: 3rem;">
                         <label for="index">Zvol stĺpec</label>
                         <input max="4" value="1" type="number" id="index"
-                           style="border: none; border-bottom: 1px solid green; text-align: center; width: 4rem;">
+                           style="border: none; border-bottom: 1px solid grey; text-align: center; width: 4rem;">
                         <input type="hidden" value="4" id="matrixSize">
                         <div style="display: flex;white-space: nowrap;
                         overflow-x: auto;
@@ -156,7 +156,7 @@
                      <div style="padding-bottom: 5rem;">
 
                         <label for="matrix-size">Veľkosť matice:</label>
-                        <input style="border: none; border-bottom: 1px solid green; text-align: center" type="number"
+                        <input style="border: none; border-bottom: 1px solid grey; text-align: center" type="number"
                            id="matrix-size" name="matrix-size" value="3" min="1" max="10" />
                         <div style="display: flex;">
                            <table style="margin: 1rem" id="matrix-input">
