--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -92,7 +92,7 @@
                      <div style="padding-bottom: 5rem;">
 
                         <label for="matrix-size">Veľkosť matice:</label>
-                        <input style="border: none; border-bottom: 1px solid green; text-align: center" type="number"
+                        <input style="border: none; border-bottom: 1px solid grey; text-align: center" type="number"
                            id="matrix-size" name="matrix-size" value="3" min="1" max="10" />
                         <div style="display: flex;white-space: nowrap;
                         overflow-x: auto;
