--- a/linearnaAlgebra/témy/vypočetGauss/index.html
+++ b/linearnaAlgebra/témy/vypočetGauss/index.html
@@ -57,7 +57,7 @@
                   <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
                      <p>Na výpočet <strong>Gaussovho tvaru matice</strong> možno použit' nasledujúci postup:
                      <div style="text-align: center;">
-                        <ul style="display: inline-block; text-align: left; margin: 1rem auto;" class="rules">
+                        <ul style="text-align: left; margin: 1rem auto;" class="rules">
                            <li>A1: Ak matica
                               má všetky riadky nulové, tak je automaticky v Gaussovom tvare. V opačnom prípade vyberieme
                               taký
