--- a/linearnaAlgebra/témy/algebrOperacieMatice/index.html
+++ b/linearnaAlgebra/témy/algebrOperacieMatice/index.html
@@ -35,7 +35,7 @@
 <body>
    <div class="container-fluid">
       <div class="row">
-         <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block " id="sidebar12"></nav>
+         <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block " id="sidebar12" data-simplebar></nav>
          <main style="margin-top: 3rem;">
             <header>
                <nav class="navbar navbar-expand-lg navbar-light fixed-top ">
