--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -12,6 +12,8 @@
         crossorigin="anonymous"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="	https://unpkg.com/mathjs@9.5.2/lib/browser/math.js"></script>
+    <script src="gaussElim.js"></script>
     <link rel="stylesheet" href="../../../styleAll.css">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../detStvMatice/style.css">
@@ -143,11 +145,19 @@
                             </tbody>
                         </table>
                     </div>
+                    <br>
+                    <button id="calcBTN6" type="button" class="btn btn-outline-success" style="margin-left: 1.2rem;">
+                        Vypočítaj
+                    </button>
+                    <button id="clearBTN6" type="button" class="btn btn-outline-danger" style="margin-left: 1.2rem;">
+                        Vymaž
+                    </button>
                     </p>
                 </div>
             </div>
         </div>
         <script src="../algebrOperacieMatice/creatMatr.js"></script>
+        <script src="sustavy.js"></script>
     </main>
 
 </body>
