working with some bugs

--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -144,6 +144,10 @@
                             <tbody>
                             </tbody>
                         </table>
+                        <table id="matrix-input">
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
                     <br>
                     <button id="calcBTN6" type="button" class="btn btn-outline-success" style="margin-left: 1.2rem;">
@@ -153,6 +157,8 @@
                         Vymaž
                     </button>
                     </p>
+                    <br>
+                    <p id="result"></p>
                 </div>
             </div>
         </div>
