adjusted styles on LA pages nav

--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../../../styleAll.css">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../detStvMatice/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
@@ -53,7 +54,8 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../../../landingPage/index.html">
+                            <a class="nav-link home" style="color: white; background-color: #504e4e;"
+                                href="../../../landingPage/index.html">
                                 <svg style=" margin-right: 2px; margin-bottom: 4px;" xmlns="http://www.w3.org/2000/svg"
                                     width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                                     <path
