--- a/linearnaAlgebra/index.html
+++ b/linearnaAlgebra/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"></script>
    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
    <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="témy/sustavyLinearnychRovnic/style.css">
    <!-- Font Awesome -->
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
    <!-- Google Fonts -->
