--- a/linearnaAlgebra/témy/vypočetGauss/index.html
+++ b/linearnaAlgebra/témy/vypočetGauss/index.html
@@ -81,12 +81,71 @@
                         postupného používania riadkovej operácie O3 postaráme o to, aby sme vynulovali aj prvky v stĺpci
                         nad vedúcou jednotkou.</p>
                      <br>
-                     <p style="color: grey">Príklad s podrobným postupom nájdete v záložke "Vypočítané príklady"
+                     <p style="color: grey">Príklad s podrobným postupom nájdete v záložke "Príklady"
                      </p>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
-                     <p>Tab 2 content</p>
+                     <p>Príklad použitia algoritmu na úpravu matice $$A$$ do gaussovho tvaru:</p>
+                     <div class="mathjax_matrix table-responsive">$$
+                        \mathbf{A} = \begin{pmatrix}
+                        1 & -2 & 3 & -1 & 3 \\
+                        -2 & 4 & -6 & 8 & -2 \\
+                        3 & -4 & 5 & 1 & 5 \\
+                        2 & -4 & 6 & 1 & 8
+                        \end{pmatrix}
+                        $$
+                     </div>
+                     <p>Ked'že prvok najviac vl'avo v prvom riadku je (vedúca) jednotka, prejdeme rovno na krok A2, čiže
+                        na vytvorenie núl pod touto jednotkou. To dosiahneme tak, že pripočítame dvojnásobok prvého
+                        riadku k druhému riadku, (-3)-násobok prvého riadku k tretiemu riadku, a napokon (-2)-násobok
+                        prvého riadku ku poslednému riadku. Tak dostaneme z pôvodnej matice s riadkami $$R_1$$, $$R_2$$,
+                        $$R_3$$ a $$R_4$$ novú (ekvivalentnú) maticu s nezmeneným prvým riadkom a novým druhým, tretím a
+                        štvrtým riadkom $$R'_2$$, $$R'_3$$ a $$R'_4$$. Symbolicky, vykonanie uvedených riadkových
+                        operácií
+                        typu O3 označíme takto: $$R'_2=R_2+2R_1$$, $$R'_3=R_3+(-3)R_1$$, a $$R'_4=R_4+(-2)R_1$$.</p>
+                     <div class="mathjax_matrix table-responsive">$${\bf A}=\left( \begin{array}{rrrrr}
+                        1 & -2 & 3 & -1 & 3 \\
+                        -2 & 4 & -6 & 8 & -2 \\
+                        3 & -4 & 5 & 1 & 5 \\
+                        2 & -4 & 6 & 1 & 8 \end{array}\right)
+                        \begin{array}{l} R'_2=R_2+2R_1 \\R'_3=R_3+(-3)R_1 \\R'_4=R_4+(-2)R_1 \end{array}
+                        $$
+                     </div>
+                     <p> Potom
+                        prejdeme na krok A3, čiže ignorujeme prvý riadok a kroky A1 a A2 znova aplikujeme na druhom až
+                        štvrtom riadku vzniknutého medzivýsledku, atd'.</p>
+                     <div class="mathjax_matrix table-responsive">
+                        $$
+                        \cong \left( \begin{array}{rrrrr}
+                        1 & -2 & 3 & -1 & 3 \\
+                        0 & 0 & 0 & 6 & 4\\
+                        0 & 2 & -4 & 4 & -4 \\
+                        0 & 0 & 0 & 3 & 2 \end{array}\right)
+                        \begin{array}{l} R'_3=\frac12 R_3 \\R_2\leftrightarrow R'_3 \\\end{array}
+                        $$
+                     </div>
+                     <div class="mathjax_matrix table-responsive">
+                        $$
+                        \cong \left( \begin{array}{rrrrr}
+                        1 & -2 & 3 & -1 & 3 \\
+                        0 & 1 & -2 & 2 & -2 \\
+                        0 & 0 & 0 & 6 & 4 \\
+                        0 & 0 & 0 & 3 & 2 \end{array}\right)
+                        \begin{array}{l} R'_3=\frac16 R_3 \\R'_4=R_4+(-3)R'_3 \end{array}
+                        $$
+                     </div>
+                     <div class="mathjax_matrix table-responsive">
+                        $$
+                        \cong \left( \begin{array}{rrrrr}
+                        1 & -2 & 3 & -1 & 3 \\
+                        0 & 1 & -2 & 2 & -2 \\
+                        0 & 0 & 0 & 1 & 2/3 \\
+                        0 & 0 & 0 & 0 & 0 \end{array}\right) ={\bf B} \ \ .
+                        $$
+                     </div>
+                     <p>Matica $$\bf B$$ je Gaussovým tvarom matice $$\bf A$$; samozrejme $${\bf B}\cong{\bf A}$$.</p>
                   </div>
+
                   <div class="tab-pane fade" id="practice-problems" role="tabpanel"
                      aria-labelledby="practice-problems-tab">
                      <p>Tab 3 content</p>
