--- a/linearnaAlgebra/témy/riadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/riadkoveOperacie/index.html
@@ -28,10 +28,12 @@
       });
       $('#myTab').load('../../../components/tab_links2.html');
 
+
    });
+
 </script>
 
-<body>
+<body onload="updateMainMargin();">
    <div class="container-fluid">
       <div class="row">
          <nav class="col-md-3 col-lg-2  sidebar d-none d-lg-block" id="sidebar12" data-simplebar></nav>
@@ -168,9 +170,11 @@
                </div>
             </div>
          </main>
-         <script src="../../../sizeAdjust.js"></script>
+
       </div>
    </div>
+
 </body>
+<script src="../../../sizeAdjust.js"></script>
 
 </html>
